edits on emp and patent to render correctly on mobile devices

--- a/src/css/sections/_emp.core.scss
+++ b/src/css/sections/_emp.core.scss
@@ -85,7 +85,7 @@ body > div.menu-container > div.primary-menu > ul > li:nth-child(3) > ul > li:nt
 
   .page-2 {
     &.overflow-fix {
-      min-height:700px;
+      min-height:800px;
       height: auto;
     }
     .match-light {
