--- a/src/css/sections/_emp.responsive.scss
+++ b/src/css/sections/_emp.responsive.scss
@@ -193,6 +193,8 @@
     .match-dark {
       .description {
         font-size: 1rem;
+        min-height:360px;
+        width:35%;
       }
 
       .pattern {
